# my-tlucalendar

./: .gitignore  .gitlab-ci.yml  DESIGN.md  PRODUCT.md  README.md  build_and_run.cmd  build_and_run.sh  crash_analysis_report.md  date_check.js  delete_tlu_calendar.dart  docker-compose.yml  get_certificate_pin.ps1  pubspec.yaml  release.cmd  rewrite_settings.py  robo_test_identifiers.md  run_android.cmd  run_android.sh  run_emulator_only.cmd  run_emulator_only.sh  tech_stack_analysis.md  update_git_repo.cmd  update_local_repo.bat
.github/workflows/: disabled.yaml  release_main.yaml
.mimocode/plans/: 1782936381848-calm-orchid.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
assets/lottie/: empty_schedule.json  login_required.json  relax.json
lib/: injection_container.dart  main.dart
lib/providers/: auth_provider.dart  education_program_provider.dart  exam_provider.dart  grade_provider.dart  note_provider.dart  registration_provider.dart  schedule_provider.dart  settings_provider.dart  theme_provider.dart  tuition_provider.dart
lib/screens/: app_initializer.dart  calendar_screen.dart  education_program_screen.dart  exam_schedule_screen.dart  home_shell.dart  logs_screen.dart  settings_screen.dart  setup_wizard_screen.dart  today_screen.dart  tuition_fee_screen.dart
linux/: CMakeLists.txt
server/: app.py  deploy_guide.md  minidump-server.service  setup_service.sh
windows/: CMakeLists.txt
(+119 files in other folders)
